@@ -24,6 +24,10 @@ with all sufficient information, see the ChangeLog file or Redmine
 
   * String.new(capacity: size) [Feature #12024]
 
+* MatchData
+
+  * MatchData#named_captures [Feature #11999]
+
 === Stdlib updates (outstanding ones only)
 
 * CSV
